[gd_scene load_steps=22 format=3 uid="uid://b6d4y5ww7g3sb"]

[ext_resource type="Script" path="res://scripts/main_hallway.gd" id="1_sv7ng"]
[ext_resource type="Texture2D" uid="uid://djj5s6l7lvov8" path="res://imgs/rooms/main-hallway.png" id="2_ehqfk"]
[ext_resource type="StyleBox" uid="uid://c17jcsekrhwk2" path="res://resources/button_stylebox.tres" id="3_3seoe"]
[ext_resource type="Texture2D" uid="uid://bhnjfcwe7a6d2" path="res://imgs/rooms/masks/main_hallway_big_D_mask.png" id="4_6v4oq"]
[ext_resource type="Texture2D" uid="uid://dausw13pqqwto" path="res://imgs/rooms/masks/main-hallway_kitchen_mask.png" id="4_o0wm0"]
[ext_resource type="BitMap" path="res://imgs/rooms/masks/main_hallway_big_D_mask_bitmap.tres" id="5_6k1am"]
[ext_resource type="Texture2D" uid="uid://co8n6fkuyhppi" path="res://imgs/rooms/masks/main_hallway_storage_mask.png" id="5_o3r2r"]
[ext_resource type="Texture2D" uid="uid://bsq48gvrsnxu8" path="res://imgs/rooms/masks/main_hallway_passage_mask.png" id="6_tr6t8"]
[ext_resource type="Texture2D" uid="uid://svwcesr5po2k" path="res://imgs/sprites/arrow_mask.png" id="7_k8cvg"]
[ext_resource type="BitMap" path="res://imgs/sprites/arrow_ask_bitmap.tres" id="8_lxy8i"]
[ext_resource type="Texture2D" uid="uid://cviltk10vq2sj" path="res://imgs/sprites/arrow.png" id="9_6cb5g"]
[ext_resource type="Texture2D" uid="uid://b6ffg1a63u8tj" path="res://imgs/rooms/masks/main_hallway_plant_mask.png" id="12_8re2f"]
[ext_resource type="BitMap" path="res://imgs/rooms/masks/main_hallway_plant_mask_bitmap.tres" id="13_vneju"]
[ext_resource type="PackedScene" uid="uid://c0swdtotoaijr" path="res://scenes/tasks/task_water_hallway_plant.tscn" id="14_lj5mk"]
[ext_resource type="PackedScene" uid="uid://dcd4gsgke76ch" path="res://scenes/tasks/task_drop_coffee_boss.tscn" id="15_2osxc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qxhba"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_blhor"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ussbk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_62jgl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yah5k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ijul4"]

[node name="Main_Hallway" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_sv7ng")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_ehqfk")

[node name="Doors" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HR" type="Button" parent="Doors"]
layout_mode = 0
offset_left = 593.0
offset_top = 456.0
offset_right = 776.0
offset_bottom = 792.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_qxhba")
theme_override_styles/hover = ExtResource("3_3seoe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_blhor")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ussbk")

[node name="Boss" type="TextureButton" parent="Doors"]
self_modulate = Color(0.34902, 0.792157, 1, 0.533333)
texture_filter = 1
layout_mode = 0
offset_left = 1192.0
offset_top = 456.0
offset_right = 1400.0
offset_bottom = 792.0
texture_hover = ExtResource("4_6v4oq")
texture_click_mask = ExtResource("5_6k1am")
stretch_mode = 0

[node name="Kitchen" type="TextureButton" parent="Doors"]
self_modulate = Color(0.34902, 0.792157, 1, 0.533333)
texture_filter = 1
layout_mode = 0
offset_left = 136.0
offset_top = 344.0
offset_right = 345.0
offset_bottom = 1008.0
texture_hover = ExtResource("4_o0wm0")
stretch_mode = 0

[node name="Storage" type="TextureButton" parent="Doors"]
self_modulate = Color(0.34902, 0.792157, 1, 0.533333)
texture_filter = 1
layout_mode = 0
offset_left = 1552.0
offset_top = 392.0
offset_right = 1672.0
offset_bottom = 912.0
texture_hover = ExtResource("5_o3r2r")
stretch_mode = 0

[node name="Passage" type="TextureButton" parent="Doors"]
self_modulate = Color(0.34902, 0.792157, 1, 0.533333)
texture_filter = 1
layout_mode = 0
offset_left = 1768.0
offset_top = 304.0
offset_right = 1920.0
offset_bottom = 1080.0
texture_hover = ExtResource("6_tr6t8")
stretch_mode = 0

[node name="Plan" type="Button" parent="Doors"]
layout_mode = 0
offset_left = 823.0
offset_top = 488.0
offset_right = 968.0
offset_bottom = 584.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_62jgl")
theme_override_styles/hover = ExtResource("3_3seoe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yah5k")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ijul4")

[node name="Restaurant" type="TextureButton" parent="Doors"]
self_modulate = Color(0.34902, 0.792157, 1, 0.533333)
texture_filter = 1
layout_mode = 0
offset_left = 922.0
offset_top = 928.0
offset_right = 1036.0
offset_bottom = 1059.0
texture_hover = ExtResource("7_k8cvg")
texture_click_mask = ExtResource("8_lxy8i")
stretch_mode = 0

[node name="Arraw_tex" type="TextureRect" parent="Doors/Restaurant"]
show_behind_parent = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("9_6cb5g")

[node name="Plant" type="TextureButton" parent="Doors"]
self_modulate = Color(0.34902, 0.792157, 1, 0.533333)
texture_filter = 1
layout_mode = 0
offset_left = 976.0
offset_top = 304.0
offset_right = 1280.0
offset_bottom = 704.0
texture_hover = ExtResource("12_8re2f")
texture_click_mask = ExtResource("13_vneju")
stretch_mode = 0

[node name="Tasks" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Day1" type="Control" parent="Tasks"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Day2" type="Control" parent="Tasks"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Day3" type="Control" parent="Tasks"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Task_water_Hallway_Plant" parent="Tasks/Day3" instance=ExtResource("14_lj5mk")]
layout_mode = 1

[node name="Task_drop_Coffee_boss" parent="Tasks/Day3" instance=ExtResource("15_2osxc")]
layout_mode = 1

[node name="Day4" type="Control" parent="Tasks"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Task_water_Hallway_Plant" parent="Tasks/Day4" instance=ExtResource("14_lj5mk")]
layout_mode = 1

[node name="Task_drop_Coffee_boss" parent="Tasks/Day4" instance=ExtResource("15_2osxc")]
layout_mode = 1

[node name="Day5" type="Control" parent="Tasks"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Task_water_Hallway_Plant" parent="Tasks/Day5" instance=ExtResource("14_lj5mk")]
layout_mode = 1

[node name="Task_drop_Coffee_boss" parent="Tasks/Day5" instance=ExtResource("15_2osxc")]
layout_mode = 1

[node name="Day6" type="Control" parent="Tasks"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Task_water_Hallway_Plant" parent="Tasks/Day6" instance=ExtResource("14_lj5mk")]
layout_mode = 1

[connection signal="pressed" from="Doors/HR" to="." method="_on_hr_pressed"]
[connection signal="pressed" from="Doors/Boss" to="." method="_on_boss_pressed"]
[connection signal="pressed" from="Doors/Kitchen" to="." method="_on_kitchen_pressed"]
[connection signal="pressed" from="Doors/Storage" to="." method="_on_storage_pressed"]
[connection signal="pressed" from="Doors/Passage" to="." method="_on_passage_pressed"]
[connection signal="pressed" from="Doors/Plan" to="." method="_on_plan_pressed"]
[connection signal="pressed" from="Doors/Restaurant" to="." method="_on_restaurant_pressed"]
[connection signal="pressed" from="Doors/Plant" to="." method="_on_plant_pressed"]
